# NMEAParse

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: NMEAParser.pc.in
examples/: CMakeLists.txt  main.cpp
include/: NMEAParser.h
src/: NMEAParser.cpp
tests/: CMakeLists.txt  test_nmea.cpp
